--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "mongoose": "^6.6.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5",
+    "path": "^0.12.7"
   }
 }
