--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,4 @@
+DATABSE_CONNECTION = "mongodb://localhost:27017/Social_Pro"
 
 INFLUENCER_ENCRYPTION_KEY=FEDTS4512879#$%#^VDVEergerger
 INFLUENCER_ACCESS_TOKEN=5891247$%^$%CVDFVDFergergesry%^@4536
