--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "path": "^0.12.7"
   }
 }
