--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "firebase": "^9.14.0",
+    "firebase-admin": "^11.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
