--- a/config/.env
+++ b/config/.env
@@ -1,4 +1,4 @@
-DATABSE_CONNECTION = "mongodb://localhost:27017/Social_Pro"
+DATABSE_CONNECTION = "mongodb+srv://fracasset:fracasset@fracassetcluster.vylmh.mongodb.net/test"
 
 INFLUENCER_ENCRYPTION_KEY=FEDTS4512879#$%#^VDVEergerger
 INFLUENCER_ACCESS_TOKEN=5891247$%^$%CVDFVDFergergesry%^@4536
