make it better 2

--- a/config/.env
+++ b/config/.env
@@ -1,4 +1,6 @@
-DATABSE_CONNECTION = "mongodb+srv://fracasset:fracasset@fracassetcluster.vylmh.mongodb.net/test"
+# DATABSE_CONNECTION = "mongodb://localhost:27017/Social_Pro"<username>:<password>
+DATABSE_CONNECTION = "mongodb+srv://Admin:Admin@socialpro.lnzkgjv.mongodb.net/test"
+PORT = 5000
 
 INFLUENCER_ENCRYPTION_KEY=FEDTS4512879#$%#^VDVEergerger
 INFLUENCER_ACCESS_TOKEN=5891247$%^$%CVDFVDFergergesry%^@4536
