--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "firebase": "^9.14.0",
     "firebase-admin": "^11.2.1",
+    "fs": "^0.0.1-security",
+    "insta-fetcher": "^1.3.25",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "path": "^0.12.7"
+    "otp-generator": "^4.0.0",
+    "path": "^0.12.7",
+    "puppeteer": "^19.3.0",
+    "uuid": "^9.0.0"
   }
 }
