--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.20",
     "otp-generator": "^4.0.0",
     "path": "^0.12.7",
+    "paytmchecksum": "^1.5.0",
     "puppeteer": "^19.4.1",
     "uuid": "^9.0.0"
   }
