Admin user Manage APi 1

--- a/config/.env
+++ b/config/.env
@@ -2,6 +2,10 @@
 DATABSE_CONNECTION = "mongodb+srv://Admin:Admin@socialpro.lnzkgjv.mongodb.net/socialPro"
 PORT = 5000
 
+# Razorpay
+key_id = 'rzp_test_A4XEPaPN39SC4E' 
+key_secret = 'EDiiQyB00sRK1xZh8jSvuVkI'
+
 INFLUENCER_ENCRYPTION_KEY=FEDTS4512879#$%#^VDVEergerger
 INFLUENCER_ACCESS_TOKEN=5891247$%^$%CVDFVDFergergesry%^@4536
 INFLUENCER_ACCESS_TIME=90d
@@ -28,5 +32,6 @@ USER_OTP_TOKEN=BDEFkf:laKFJa:heF'FJhaFDKSGSNSGNW87Q893R'
 USER_OTP_ACCESS_TIME=5m
 
 
+heroku
 902740
 746521
