--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "\"# SocialPro\"",
   "main": "index.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
@@ -30,6 +29,7 @@
     "path": "^0.12.7",
     "paytmchecksum": "^1.5.0",
     "puppeteer": "^19.4.1",
+    "razorpay": "^2.8.6",
     "uuid": "^9.0.0"
   }
 }
