Advertiser to Admin Transfer API 1

--- a/config/.env
+++ b/config/.env
@@ -31,7 +31,4 @@ USER_OTP_ENCRYPTION_KEY=741598HFBAEBYBBAVBFBABV#$^$%^#$@44
 USER_OTP_TOKEN=BDEFkf:laKFJa:heF'FJhaFDKSGSNSGNW87Q893R'
 USER_OTP_ACCESS_TIME=5m
 
-
-heroku
-902740
-746521
+password for OTP service ::: awcbhsynvlwzdmji
