Admin to influencern Transfer API 1

--- a/config/.env
+++ b/config/.env
@@ -6,6 +6,10 @@ PORT = 5000
 key_id = 'rzp_test_A4XEPaPN39SC4E' 
 key_secret = 'EDiiQyB00sRK1xZh8jSvuVkI'
 
+insta_app_key = 1474430383361971
+insta_secret_key = ffc3cf690475f1ea468bcf7a32194177
+insta_redirectUrl = https://github.com/socialPro06/SocialPro
+
 INFLUENCER_ENCRYPTION_KEY=FEDTS4512879#$%#^VDVEergerger
 INFLUENCER_ACCESS_TOKEN=5891247$%^$%CVDFVDFergergesry%^@4536
 INFLUENCER_ACCESS_TIME=90d
